samples/_failures_safe/1761208962_a37a87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d4638b2.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_2d4638b2.c:170: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_2d4638b2.c:169:5: error: expected declaration or statement at end of input
  169 |     for
      |     ^~~
